Added: middle click to close functionality

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,6 @@
     ],
     "background": {
         "scripts": ["lib/contextMenu.js"],
-        "persistent": false
+        "persistent": true
       }
 }
